Refactored native calling in all platforms